--- a/assets/css/templatemo-woox-travel.css
+++ b/assets/css/templatemo-woox-travel.css
@@ -746,7 +746,7 @@ Banner Style
 }
 #section-1 .more-info {
   margin-top: 60px;
-  background-color: #fff;
+  background-color: #ffffff2b;
   padding: 30px 60px;
   border-radius: 61px;
   position: absolute;
